# SocketStreams

./: .gitignore  CMakeLists.txt  CheckAtCompileTime.h  Doxyfile  IOSocketBuffer.cpp  IOSocketBuffer.h  IOSocketStream.cpp  IOSocketStream.h  Network.h  README.md  SocketStreams.sln  SocketStreams.vcxproj  SocketStreams.vcxproj.filters
.github/workflows/: ci.yml
SocketStreams/include/: IOSocketStream.h  Network.h  WebException.h
Tests/: CMakeLists.txt  main.cpp  server.cpp
docs/: _base_i_o_socket_buffer_8cpp.html  _base_i_o_socket_buffer_8h.html  _base_i_o_socket_buffer_8h.js  _base_i_o_socket_buffer_8h_source.html  _base_i_o_socket_stream_8cpp.html  _base_i_o_socket_stream_8h.html  _base_i_o_socket_stream_8h.js  _base_i_o_socket_stream_8h_source.html  _base_network_8cpp.html  _base_network_8h.html  _base_network_8h.js  _base_network_8h_source.html  _buffer_array_8cpp.html  _check_at_compile_time_8cpp.html  _check_at_compile_time_8h.html  _check_at_compile_time_8h.js  _check_at_compile_time_8h_source.html  _container_wrapper_8cpp.html  _container_wrapper_8h.html  _container_wrapper_8h.js  _container_wrapper_8h_source.html  _i_o_socket_buffer_8cpp.html  _i_o_socket_buffer_8h.html  _i_o_socket_buffer_8h.js  _i_o_socket_buffer_8h_source.html  _i_o_socket_stream_8cpp.html  _i_o_socket_stream_8h.html  _i_o_socket_stream_8h.js  _i_o_socket_stream_8h_source.html  _network_8cpp.html  _network_8h.html  _network_8h.js  _network_8h_source.html  _socket_streams_utility_8cpp.html  _socket_streams_utility_8cpp.js  _socket_streams_utility_8h.html  _socket_streams_utility_8h.js  _socket_streams_utility_8h_source.html  _web_exception_8cpp.html  _web_exception_8h.html  (+87 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  concepts_0.js  concepts_1.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  (+35 more)
include/: ContainerWrapper.h  IOSocketBuffer.h  Network.h  SocketStreamsUtility.h  WebException.h
src/: BaseIOSocketBuffer.cpp  BaseIOSocketBuffer.h  BaseIOSocketStream.cpp  BaseIOSocketStream.h  BaseNetwork.cpp  BaseNetwork.h  BufferArray.cpp  CheckAtCompileTime.cpp  ContainerWrapper.cpp  ContainerWrapper.h  IOSocketBuffer.cpp  IOSocketBuffer.h  IOSocketStream.cpp  IOSocketStream.h  Network.cpp  Network.h  SocketStreamsUtility.cpp  SocketStreamsUtility.h  WebException.cpp  WebException.h
